wizard : fixed advanced selectors not showing by default when filled

--- a/scraper/_inc/scss/wpsstm-scraper-wizard.scss
+++ b/scraper/_inc/scss/wpsstm-scraper-wizard.scss
@@ -1,4 +1,5 @@
 #wizard-wrapper{
+    position:relative;
 
     input.fullwidth{
         width:100%;
